My first commit

--- a/NFTs.html
+++ b/NFTs.html
@@ -33,6 +33,11 @@
         <p><b>What are the impotance of NFTs </b></p>
         <p>One of the most important advantages of the NFTs is that the digital creators get to monetize their work which was difficult to do before. NFTs provide a way of creating verifiable ownership and scarcity, making digital art and other digital assets more collectible and valuable.</p>
         </div>
+        <section class="Videos">
+            <h1 class="intro2">Videos</h1>
+
+            <img
+        </section>
     </section>
 </body>
 </html>
